Added cell at the end which refreshes NCBI part of the database. Also, minor edits to comments. Added extra details and fixed spelling errors.

--- a/Aaron update NCBI bits.ipynb
+++ b/Aaron update NCBI bits.ipynb
@@ -78,7 +78,7 @@
     "#### Make the dictionary with accesion numbers as keys and taxids as values\n",
     "\n",
     "* **Accesion.txt** is the list of accesion values from the current NCBI references that we have\n",
-    "* **db_info_even_less.txt** is the accesion values paired with taxids. Some of the taxids have decimal values which will be delt with in later cells. Note: this file is too big for jupyter notebook to make a full dictionary out of, so this code only creates dictionary accesion-taxid entries when accesion is also found in **Accesion.txt** \n",
+    "* **db_info_even_less.txt** is the accesion values paired with taxids. Some of the taxids have decimal values which will be delt with in later cells. Too big for github. Note: this file is too big for jupyter notebook to make a full dictionary out of, so this code only creates dictionary accesion-taxid entries when accesion is also found in **Accesion.txt**.\n",
     "\n",
     "* If there is more than one taxid to an accesion number, it will state that in the output and print the accesion number\n",
     "\n",
@@ -250,14 +250,14 @@
     "\n",
     "When prompted for strain ID there are a few options: \n",
     "* \"exit\" which will exit code and temporarily save current progress (see line 75 and 76 for more detail) \n",
-    "* \"other\" inserts the current entry into a list of the same name, these will later be removed from the table and saved into a separate table, also of the same name (OTHER)\n",
+    "* \"other\" inserts the current entry into a list of the same name, these will later be removed from the table and saved into a separate table, also of the same name (OTHER).\n",
     "* writing in a number will set the strain taxid in the table to that value\n",
     "* In cases where \"Press enter to accept suggested value\" appears, if you press \"enter\" with no information in the box, the suggested taxid will be inserted into the strain ID\n",
     "* In the case where \"press enter...\" is **not** seen, pressing enter with nothing in the box will act as if you typed \"exit\"\n",
     "\n",
     "**CREATES other**\n",
     "\n",
-    "This is a list of entries where the strain ID information could not be determined. It is used in the next cell."
+    "This is a list of entries where the strain ID information could not be determined. The entries are entries from manual_deal, but the suggested taxids have floats corrected. Other then that, entries are the same. It is used in the next cell. "
    ]
   },
   {
@@ -305,7 +305,7 @@
     "# The following functions are used to automate parts of the handling process\n",
     "\n",
     "# returns True if species is 2 or 3 entries from the end (ie, current taxid is strain)\n",
-    "# no rank required to return True bc in ncbi strain is given no rank (and we are looking for strain)\n",
+    "# \"no rank\" required to return True bc in ncbi strain is given rank \"no rank\" (and we are looking for strain)\n",
     "def auto_accept(lin_rank):\n",
     "    if lin_rank[-1] == \"no rank\":\n",
     "        if lin_rank[-2] == \"species\" or lin_rank[-3] == \"species\":\n",
@@ -330,7 +330,7 @@
     "        return False\n",
     "\n",
     "# meant to be run if the function above returns False\n",
-    "# removes converts suggested taxid from float to integer\n",
+    "# converts suggested taxid from float to integer\n",
     "def correct_floats(all_line):\n",
     "    if auto_strain_check(all_line): # if the float is the strain, get rid of decimal\n",
     "        all_line[1] = str(math.floor(float(all_line[1])))\n",
@@ -384,10 +384,10 @@
     "                print(\"Taxids of suggested taxid lineage: \")\n",
     "                print(l_i)\n",
     "                print(\"press ENTER to accept suggested taxid value as new strain ID\")\n",
-    "                x = input(\"strain ID: \") or str(i[1])\n",
+    "                x = input(\"strain ID: \") or str(i[1]) # takes input or suggested taxid if box is empty\n",
     "                if x == \"exit\":\n",
     "                    break\n",
-    "                elif x == \"other\":\n",
+    "                elif x == \"other\": \n",
     "                    other.append(i)\n",
     "                    done.append(i)\n",
     "                else: \n",
@@ -439,6 +439,83 @@
     "# show_me = pd.read_sql_query(\"SELECT * FROM OTHER;\", db)\n",
     "# print(show_me)\n",
     "\n",
+    "db.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NOT PART OF THE PROGRESSION OF CELLS TO UPDATE NCBI \n",
+    "\n",
+    "#### REFRESH THE NCBI PART OF THE TABLE if you commited errors and want to start over\n",
+    "\n",
+    "requires the BASE table where you are pulling taxids. It must have columns for Database name, Filepath, and strain, species, and genus taxids.\n",
+    "\n",
+    "Corrected database should already exist\n",
+    "\n",
+    "There is a warning, must type yEs (with the capital E) when prompted in order to run the program. (This is just saftey in case cells are run in mindless succession). Anything other than \"yEs\" will throw assertion error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BOILER PLATE ----------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "#The warning process ----------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "print(\"THIS CODE IS TO BE RUN ONLY WHEN YOU WANT TO REFRESH THE NCBI PART OF THE TABLE!\")\n",
+    "print(\"NCBI ROWS WILL BE REPLACED BY BASE DATABASE ROWS FOR NCBI!\")\n",
+    "print(\"THIS WILL UNDO ANYTHING YOU HAVE DONE REGARDING NCBI!\")\n",
+    "x = input(\"WOULD LIKE TO CONTINUE? yEs/no :\")\n",
+    "\n",
+    "assert(x == 'yEs')\n",
+    "\n",
+    "\n",
+    "# CONNECT DATABASES -----------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "#connect to Aarons database (BASE)\n",
+    "db = sqlite3.connect('refSeqFungiStatsWithFUNGIDB_NEW_SCHEMA_AND_TAXID_UPDATES-Copy1.db')\n",
+    "\n",
+    "data_query = pd.read_sql_query(\"SELECT * FROM SPECIESDB WHERE DBNAME = 'NCBI';\", db)\n",
+    "\n",
+    "#connect to own database (The database to be corrected)\n",
+    "mine = sqlite3.connect('my_database_4-12-2019.db')\n",
+    "\n",
+    "# FIX TABLE I WILL USE ---------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "# remove all rows for NCBI\n",
+    "mine.execute(\"DELETE FROM DB_TABLE WHERE DBNAME = 'NCBI';\")\n",
+    "mine.commit()\n",
+    "\n",
+    "# replace deleted rows with BASE data for NCBI \n",
+    "for index, row in data_query.iterrows():\n",
+    "    mine.execute(\"INSERT INTO DB_TABLE (DBNAME, SPECIESTAXID, GENUSTAXID, STRAINTAXID, FILEPATH) VALUES (?, ?, ?, ?, ?);\", ('NCBI', row['SPECIESTAXID'], row['GENUSTAXID'], 0, row['FILEPATH']))\n",
+    "    mine.commit()\n",
+    "\n",
+    "    \n",
+    "# fix the one genus------------------------------------------------------------------------------------------------------\n",
+    "# this is for a specific entry that has no genus in the BASE database I used\n",
+    "spec_old = 373870\n",
+    "spec_new = 2482752\n",
+    "genus = 47747\n",
+    "\n",
+    "mine.execute(\"UPDATE DB_TABLE SET SPECIESTAXID = ?, GENUSTAXID = ? WHERE SPECIESTAXID = ?\", (spec_new, genus, spec_old))\n",
+    "mine.commit()\n",
+    "\n",
+    "# PRINT NCBI ROWS ----------------------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "show_me = pd.read_sql_query(\"SELECT * FROM DB_TABLE WHERE DBNAME='NCBI'\", mine)\n",
+    "print(show_me)\n",
+    "\n",
+    "# CLOSE FILES -----------------------------------------------------------------------------------------------------------------\n",
+    "mine.close()\n",
     "db.close()"
    ]
   }
