Databases in main folder, and files manipulating and upating databases are organized into their own folders. Fixed code to work with this new set up.

--- a/Update_NCBI/Aaron update NCBI bits.ipynb
+++ b/Update_NCBI/Aaron update NCBI bits.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "aaron = sqlite3.connect() #YOUR INPUT IS REQUIRED HERE. WHAT DATABASE WOULD YOU LIKE TO UPDATE\n",
     "\n",
-    "cloeffler = sqlite3.connect(\"caitlin_database_4-12-2019.db\")\n",
+    "cloeffler = sqlite3.connect(\"../caitlin_database_4-12-2019.db\")\n",
     "ncbi_only = pd.read_sql_query(\"SELECT * FROM DB_TABLE WHERE DBNAME = 'NCBI'\", cloeffler)\n",
     "\n",
     "# FUNCTIONS --------------------------------------------------------------------------------------------------------------\n",
@@ -170,7 +170,7 @@
     "from ete3 import NCBITaxa\n",
     "ncbi_taxa = NCBITaxa()\n",
     "\n",
-    "db = sqlite3.connect(\"my_database_4-12-2019.db\")\n",
+    "db = sqlite3.connect(\"../caitlin_database_4-12-2019.db\")\n",
     "\n",
     "# FUNCTIONS --------------------------------------------------------------------------------------------------------------\n",
     "# returns a list in the form: \n",
@@ -274,7 +274,7 @@
     "from ete3 import NCBITaxa\n",
     "ncbi_taxa = NCBITaxa()\n",
     "\n",
-    "db = sqlite3.connect(\"my_database_4-12-2019.db\")\n",
+    "db = sqlite3.connect(\"../caitlin_database_4-12-2019.db\")\n",
     "\n",
     "# FUNCTIONS --------------------------------------------------------------------------------------------------------------\n",
     "\n",
@@ -427,7 +427,7 @@
     "import sqlite3\n",
     "import pandas as pd\n",
     "\n",
-    "db = sqlite3.connect(\"my_database_4-12-2019.db\")\n",
+    "db = sqlite3.connect(\"../caitlin_database_4-12-2019.db\")\n",
     "\n",
     "for i in other:\n",
     "    db.execute(\"INSERT INTO OTHER SELECT * FROM DB_TABLE WHERE FILEPATH = \\'\" + i[0] + \"\\';\")\n",
@@ -450,11 +450,11 @@
     "\n",
     "#### REFRESH THE NCBI PART OF THE TABLE if you commited errors and want to start over\n",
     "\n",
-    "requires the BASE table where you are pulling taxids. It must have columns for Database name, Filepath, and strain, species, and genus taxids.\n",
+    "The BASE table where you are pulling taxids is in the parent folder. If changed,the new base database must have columns for Database name, Filepath, and strain, species, and genus taxids.\n",
     "\n",
-    "Corrected database should already exist\n",
+    "Corrected database should already exist in the parent folder.\n",
     "\n",
-    "There is a warning, must type yEs (with the capital E) when prompted in order to run the program. (This is just saftey in case cells are run in mindless succession). Anything other than \"yEs\" will throw assertion error."
+    "There is a warning, must type \"yEs\" (with the capital E) when prompted in order to run the program. This is just saftey in case cells are run in mindless succession. Anything other than exactly \"yEs\" will throw an assertion error."
    ]
   },
   {
@@ -481,12 +481,12 @@
     "# CONNECT DATABASES -----------------------------------------------------------------------------------------------------------\n",
     "\n",
     "#connect to Aarons database (BASE)\n",
-    "db = sqlite3.connect('refSeqFungiStatsWithFUNGIDB_NEW_SCHEMA_AND_TAXID_UPDATES-Copy1.db')\n",
+    "db = sqlite3.connect('../refSeqFungiStatsWithFUNGIDB_NEW_SCHEMA_AND_TAXID_UPDATES-Copy1.db')\n",
     "\n",
     "data_query = pd.read_sql_query(\"SELECT * FROM SPECIESDB WHERE DBNAME = 'NCBI';\", db)\n",
     "\n",
     "#connect to own database (The database to be corrected)\n",
-    "mine = sqlite3.connect('my_database_4-12-2019.db')\n",
+    "mine = sqlite3.connect('../caitlin_database_4-12-2019.db')\n",
     "\n",
     "# FIX TABLE I WILL USE ---------------------------------------------------------------------------------------------------\n",
     "\n",
