Changed the notes in NCBI updates again.

--- a/Update_NCBI/Aaron update NCBI bits.ipynb
+++ b/Update_NCBI/Aaron update NCBI bits.ipynb
@@ -21,7 +21,7 @@
     "* There are less than 277 rows for NCBI (which is the number of rows you have). There were 17 rows I removed because the strain information was nonexistant (even though they appeared to be labled as strain in the name). These are in a separate table \"OTHER\". I didn't change anything about the entries, so there should be no need to look at them. But they are there in case you're interested.\n",
     "\n",
     "\n",
-    "* The original code I used to update taxids is after the next cell. You should have all the text files and databases you need in the current directory to get the code to work.\n",
+    "* The original code I used to update taxids is after the next cell. All the necessary text files are in the current directory, and the necessary databases are in the parent directory.\n",
     "\n",
     "\n",
     "* If you find you need to run the cells, you should run them in order, from top to bottom. Variables from previous cells are used in later cells."
